# codespy

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
.claude/commands/: refactor-loop.md
codespy/: cli.py  languages.py  metrics.py  models.py  quality.py  scanner.py
codespy/analyzers/: complexity.py  duplication.py  smells.py
codespy/reporters/: html_reporter.py  json_reporter.py  md_reporter.py
tests/: test_complexity.py  test_duplication.py  test_metrics.py  test_quality.py  test_smells.py
tests/fixtures/: complex.py  duplicate_a.py  duplicate_b.py  simple.py
